fixed: mainNav devider issue and text size issue on tablet vers

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,7 +20,7 @@
 }
 
 h1 {
-    @apply text-headingColor font-bold  text-[30px] lg:text-[50px] leading-[133.2%];
+    @apply text-headingColor font-bold  text-[30px] md:text-[50px] leading-[133.2%];
 }
 h2 {
     @apply text-headingColor font-semibold text-[40px] leading-[133.2%];
